<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StatFragment"

    android:paddingVertical="15dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/edTxt1"
            android:hint="@string/number_1"

            android:ems="10"
            android:layout_marginTop="15dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.05"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/number_2"

            android:ems="10"
            android:id="@+id/edTxt2"

            app:layout_constraintTop_toBottomOf="@+id/edTxt1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/number_3"

            android:ems="10"
            android:id="@+id/edTxt3"

            app:layout_constraintTop_toBottomOf="@+id/edTxt2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/number_4"

            android:ems="10"
            android:id="@+id/edTxt4"

            app:layout_constraintTop_toBottomOf="@+id/edTxt3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/number_5"

            android:ems="10"
            android:id="@+id/edTxt5"

            app:layout_constraintTop_toBottomOf="@+id/edTxt4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/number_6"

            android:ems="10"
            android:id="@+id/edTxt6"

            app:layout_constraintTop_toBottomOf="@+id/edTxt5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/number_7"

            android:ems="10"
            android:id="@+id/edTxt7"

            app:layout_constraintTop_toBottomOf="@+id/edTxt6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            />


        <TextView
            android:text="Result"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"

            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textAlignment="center"

            android:id="@+id/statResultTV"

            app:layout_constraintTop_toBottomOf="@+id/edTxt7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"   />
        <Button
            android:text="Perform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/calBtn"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dp"

            app:layout_constraintTop_toBottomOf="@+id/statResultTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>